# pg-synapse

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  pgrx-tests.yml
bench/: PLAN.md  RESULTS.md  SMALL-MODEL-DIAGNOSIS.md  diag_one.sh  models.toml  results.jsonl  run_bench.sh  run_n.sh
bench/scenarios/a1_ingest/: assert.sql  meta.env  seed.sql.tmpl  seed_fs.sh  system_prompt.txt  task.txt
bench/scenarios/a2_distill/: assert.sql  meta.env  seed.sql.tmpl  system_prompt.txt  task.txt
bench/scenarios/a3_triage/: assert.sql  meta.env  seed.sql.tmpl  system_prompt.txt  task.txt
bench/scenarios/adk_root/: assert.sql  meta.env  seed.sql.tmpl  system_prompt.txt  task.txt
bench/scenarios/f1_find/: assert_fs.sh  meta.env  seed_fs.sh  system_prompt.txt  task.txt
bench/scenarios/f2_edit/: assert_fs.sh  meta.env  seed_fs.sh  system_prompt.txt  (+1 more)
crates/pg-synapse-core/: Cargo.toml
crates/pg-synapse-core/examples/: layer_recipes.rs
crates/pg-synapse-core/src/: error.rs  lib.rs
crates/pg-synapse-core/src/compression/: mod.rs
crates/pg-synapse-core/src/embedding/: mod.rs
crates/pg-synapse-core/src/executor/: conversation.rs  loop_harness.rs  mod.rs  react.rs  reflection.rs  service.rs
crates/pg-synapse-core/src/llm/: mod.rs  recovery_layer.rs  retry_layer.rs
crates/pg-synapse-core/src/memory/: mod.rs
crates/pg-synapse-core/src/plugin/: mod.rs
crates/pg-synapse-core/src/runtime/: builder.rs  mod.rs  resolver.rs
crates/pg-synapse-core/src/testing/: cassette.rs  mock_embedding.rs  mock_factories.rs  mock_llm.rs  mock_tool.rs  mod.rs
crates/pg-synapse-core/src/tool/: mcp_client.rs  mod.rs
crates/pg-synapse-core/src/types/: compression.rs  context.rs  diagnostics.rs  embedding.rs  llm.rs  memory.rs  message.rs  mod.rs  outcome.rs  profile.rs  tool.rs  trace.rs
crates/pg-synapse-core/tests/: mcp_client.rs  runtime_e2e.rs
crates/pg-synapse-macros/: Cargo.toml
crates/pg-synapse-macros/src/: lib.rs
crates/pg-synapse-macros/tests/: derive.rs
crates/pg-synapse-pgrx/: Cargo.toml  NOTES.md  pg_synapse_pgrx.control
crates/pg-synapse-pgrx/sql/: grants.sql  schema.sql
crates/pg-synapse-pgrx/src/: lib.rs  runtime_holder.rs  schema_guc.rs  spi_executor.rs  sql_functions.rs
crates/pg-synapse-pgrx/tests/pg_regress/expected/: setup.out
crates/pg-synapse-sidecar/: Cargo.toml
crates/pg-synapse-sidecar/src/: api.rs  db.rs  main.rs
crates/pg-synapse-sidecar/tests/: docker_e2e.rs
demo/: README.md
demo/db/: Dockerfile
demo/harness/: Cargo.toml  Dockerfile
demo/harness/scenarios/: bouncer.sql  dba_tickets.sql  etl.sql  guardrails.sql  index_tuner.sql  triage.sql
demo/harness/src/: api.rs  db.rs  error.rs  main.rs  runs.rs  scenarios.rs
demo/harness/static/: index.html
docs/: AGENT-SPECS.md  AGENTS-GUIDE.md  BACKLOG.md  MASTER-PLAN.md  MODEL-COMPATIBILITY.md  NEXT-STEPS.md  PUBLISHING.md  decisions.md  design.md  extension-quickstart.md  layer-recipes.md  min-specs.md  next-backlog-prompt.md  pg-synapse-boundary-matrix.md  plugin-development.md  provider-conformance.md  reactive-triggers.md  reference.md  sidecar-quickstart.md  tool-authoring.md  v0.1.1-plan.md  v0.2-issues.md
docs/framework-parity/: README.md  google-adk.md  langgraph.md  openai-agents-sdk.md
docs/research/: Research-Report-rust-agent-runtime.md  Research-Summary-rust-agent-runtime.md  _commercial-landscape.md  _oss-landscape-rust.md  _pattern-literature.md  _user-workflow-pain.md
examples/: README.md  realworld-verification.md
examples/customer-support-triage/: EXAMPLE_OUTPUT.md  README.md  run.sh  seed.sql  workflow.sql
examples/local-llama-agent/: EXAMPLE_OUTPUT.md  README.md  run.sh  seed.sql  workflow.sql
examples/reactive-triggers/: README.md  inline_demo.sql  queue_demo.sql  run.sh  seed.sql
examples/sql-agent-readwrite/: EXAMPLE_OUTPUT.md  README.md  run.sh  seed.sql  workflow.sql
examples/with-local-embeddings/: EXAMPLE_OUTPUT.md  README.md  run.sh  seed.sql  workflow.sql
plugins/pg-synapse-compaction/: Cargo.toml
plugins/pg-synapse-embeddings-ort/: Cargo.toml
plugins/pg-synapse-embeddings-ort/src/: download.rs  factory.rs  lib.rs  provider.rs
plugins/pg-synapse-embeddings-ort/tests/: smoke.rs
plugins/pg-synapse-provider-anthropic/: Cargo.toml
plugins/pg-synapse-provider-anthropic/src/: client.rs  factory.rs  lib.rs
plugins/pg-synapse-provider-anthropic/tests/: conformance.rs  live.rs  runtime_smoke.rs  wiremock.rs
plugins/pg-synapse-provider-anthropic/tests/fixtures/: conformance-default.json
plugins/pg-synapse-provider-llama-cpp/: Cargo.toml
plugins/pg-synapse-provider-llama-cpp/src/: client.rs  download.rs  factory.rs  lib.rs
plugins/pg-synapse-provider-llama-cpp/tests/: conformance.rs  live.rs  wiremock.rs
plugins/pg-synapse-provider-llama-cpp/tests/fixtures/: conformance-default.json
plugins/pg-synapse-provider-openai/: Cargo.toml
plugins/pg-synapse-provider-openai/src/: client.rs  factory.rs  lib.rs
plugins/pg-synapse-provider-openai/tests/: conformance.rs  live.rs  runtime_smoke.rs  wiremock_integration.rs
plugins/pg-synapse-provider-openai/tests/fixtures/: conformance-default.json
plugins/pg-synapse-tools-calc/: Cargo.toml
plugins/pg-synapse-tools-calc/src/: lib.rs
plugins/pg-synapse-tools-clock/: Cargo.toml
plugins/pg-synapse-tools-clock/src/: lib.rs
plugins/pg-synapse-tools-delegate/: Cargo.toml
plugins/pg-synapse-tools-fs/: Cargo.toml
plugins/pg-synapse-tools-fs/src/: lib.rs
plugins/pg-synapse-tools-fs/tests/: fs.rs
plugins/pg-synapse-tools-http/: Cargo.toml
plugins/pg-synapse-tools-http/src/: lib.rs
plugins/pg-synapse-tools-http/tests/: wiremock.rs
plugins/pg-synapse-tools-lede/: Cargo.toml
plugins/pg-synapse-tools-lede/src/: lib.rs
plugins/pg-synapse-tools-lede/tests/: lede.rs
plugins/pg-synapse-tools-sql/: Cargo.toml
plugins/pg-synapse-tools-sql/src/: lib.rs
plugins/pg-synapse-tools-sql/tests/: in_memory.rs
scripts/: pgrx
sql/: sidecar-install.sql
(+37 files in other folders)
