[workspace]
resolver = "2"
members = [
    "crates/pg-synapse-core",
    "crates/pg-synapse-macros",
    "crates/pg-synapse-pgrx",
    "plugins/pg-synapse-embeddings-ort",
    "plugins/pg-synapse-provider-openai",
    "plugins/pg-synapse-provider-anthropic",
    "plugins/pg-synapse-provider-llama-cpp",
    "plugins/pg-synapse-tools-http",
    "plugins/pg-synapse-tools-sql",
    "crates/pg-synapse-sidecar", "plugins/pg-synapse-tools-fs", "plugins/pg-synapse-tools-lede", "plugins/pg-synapse-tools-calc", "plugins/pg-synapse-tools-clock", "plugins/pg-synapse-tools-delegate",
    "plugins/pg-synapse-compaction",
    "demo/harness",
]

[workspace.package]
edition         = "2024"
rust-version    = "1.85"
version         = "0.1.1"
license         = "MIT OR Apache-2.0"
repository      = "https://github.com/yonk-labs/pg-synapse"
homepage        = "https://github.com/yonk-labs/pg-synapse"
authors         = ["Matt <matt@theyonk.com>"]

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
tower        = { version = "0.5", features = ["util"] }
async-trait  = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
schemars     = "0.8"
thiserror    = "2"
tracing      = "0.1"
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
futures      = "0.3"
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.dev]
# pgrx requires unwinding to bridge Postgres ereport(ERROR) longjmps to Rust panics.
panic = "unwind"

[profile.release]
opt-level = 3
lto       = "thin"
debug     = "line-tables-only"
# pgrx requires unwinding to bridge Postgres ereport(ERROR) longjmps to Rust panics.
panic = "unwind"
