[package]
name        = "pg-synapse-core"
description = "Postgres-native agent-loop runtime: kernel crate (traits, types, executors, Runtime)"
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[dependencies]
tokio        = { workspace = true }
tower        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
schemars     = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
futures      = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["test-util", "macros"] }
tokio-test   = "0.4"
serde_yaml   = "0.9"
