[package]
name        = "pg-synapse-macros"
description = "Proc-macro support for pg-synapse-core: #[derive(Tool)]"
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lib]
proc-macro = true

[dependencies]
syn         = { version = "2", features = ["full", "extra-traits"] }
quote       = "1"
proc-macro2 = "1"
darling     = "0.20"

[dev-dependencies]
pg-synapse-core = { path = "../pg-synapse-core" }
tokio           = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
async-trait     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
schemars        = { workspace = true }
uuid            = { workspace = true }
