[package]
name        = "pg_synapse_pgrx"
description = "pg_synapse Postgres extension (pgrx host)"
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default   = ["pg17", "embed-ort", "provider-llama-cpp", "provider-anthropic", "tools-fs"]
pg15      = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16      = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17      = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18      = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test   = []
# Bundle the ORT-backed embeddings plugin. Requires the host environment to
# expose libonnxruntime (1.24.x) via ORT_DYLIB_PATH or the system loader path.
embed-ort = ["dep:pg-synapse-embeddings-ort"]
# Bundle the llama.cpp provider plugin (OpenAI-compatible local server).
provider-llama-cpp   = ["dep:pg-synapse-provider-llama-cpp"]
# Bundle the Anthropic Claude provider plugin.
provider-anthropic   = ["dep:pg-synapse-provider-anthropic"]
# Bundle the sandboxed filesystem tools plugin (read_file, write_file, edit_file, list_files, grep).
tools-fs = ["dep:pg-synapse-tools-fs"]

[dependencies]
pgrx       = "=0.18.0"
pg-synapse-core            = { path = "../pg-synapse-core", version = "0.1.1" }
pg-synapse-provider-openai = { path = "../../plugins/pg-synapse-provider-openai", version = "0.1.1" }
pg-synapse-tools-sql       = { path = "../../plugins/pg-synapse-tools-sql", version = "0.1.1" }
pg-synapse-tools-http      = { path = "../../plugins/pg-synapse-tools-http", version = "0.1.1" }
pg-synapse-embeddings-ort  = { path = "../../plugins/pg-synapse-embeddings-ort", version = "0.1.1", optional = true }
pg-synapse-provider-llama-cpp = { path = "../../plugins/pg-synapse-provider-llama-cpp", version = "0.1.1", optional = true }
pg-synapse-provider-anthropic = { path = "../../plugins/pg-synapse-provider-anthropic", version = "0.1.1", optional = true }
pg-synapse-tools-fs        = { path = "../../plugins/pg-synapse-tools-fs", version = "0.1.1", optional = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
once_cell    = "1"
thiserror    = { workspace = true }
parking_lot  = "0.12"

[dev-dependencies]
pgrx-tests = "=0.18.0"

