[package]
name        = "pg-synapse-provider-llama-cpp"
description = "pg_synapse provider plugin for the llama.cpp server (OpenAI-compatible) with optional GGUF model download"
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[features]
default       = []
# Opt-in network tests against a live llama-server. Disabled by default so
# `cargo test` is hermetic.
live-tests    = []
# Gates the download module. reqwest is already a dep; this feature simply
# makes download::download_gguf and helpers available at compile time.
download      = []

[dependencies]
pg-synapse-core = { path = "../../crates/pg-synapse-core", version = "0.1.0" }
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
futures      = { workspace = true }
dirs         = "5"

[dev-dependencies]
tokio        = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
wiremock     = "0.6"
uuid         = { workspace = true }
chrono       = { workspace = true }
