[package]
name        = "pg-synapse-tools-calc"
description = "pg_synapse tool plugin: calculator (add/sub/mul/div)"
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[dependencies]
pg-synapse-core   = { path = "../../crates/pg-synapse-core", version = "0.1.1" }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
schemars     = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
