[package]
name        = "pg-synapse-tools-clock"
description = "pg_synapse tool plugin: get_current_time (UTC or named timezone)"
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[dependencies]
pg-synapse-core   = { path = "../../crates/pg-synapse-core", version = "0.1.1" }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
schemars     = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
